<resources>

    <string name="app_name">Rick and Morty Wiki</string>

    <string name="title_characters">Characters</string>
    <string name="title_locations">Locations</string>
    <string name="title_episodes">Episodes</string>
    <string name="title_character_detail">Character Details</string>
    <string name="txt_search">Search</string>
    <string name="cd_character_image">Character image</string>
    <string name="txt_last_known_location">Last known location:</string>
    <string name="txt_slash" translatable="false">-</string>
    <string name="response_alive">Alive</string>
    <string name="response_dead">Dead</string>
    <string name="response_unknown">Unknown</string>
    <string name="blank" translatable="false"> </string>
    <string name="cd_next_page_button">Next page button</string>
    <string name="txt_origin">Origin:</string>
    <string name="response_human">Human</string>
    <string name="response_male">Male</string>
    <string name="response_female">Female</string>
    <string name="response_genderless">Genderless</string>
    <string name="txt_status">Status</string>
    <string name="response_disease">Disease</string>

</resources>