<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/card_elevation_corner_radius"
    app:cardBackgroundColor="?attr/colorSurface"
    app:cardCornerRadius="@dimen/card_elevation_corner_radius"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCharacterImage"
            android:layout_width="@dimen/iv_size"
            android:layout_height="@dimen/iv_size"
            android:contentDescription="@string/cd_character_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCharacterName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_margin_default"
            android:layout_marginTop="@dimen/half_margin_default"
            android:layout_marginEnd="@dimen/half_margin_default"
            android:textColor="?attr/colorOnSurface"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivCharacterImage"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Rick Sanchez" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivStatus"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/tvCharacterName"
            app:layout_constraintTop_toBottomOf="@id/tvCharacterName"
            app:srcCompat="@drawable/dot_indicator" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="@dimen/half_margin_default"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@id/ivStatus"
            app:layout_constraintStart_toEndOf="@id/ivStatus"
            app:layout_constraintTop_toTopOf="@id/ivStatus"
            tools:text="Alive" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSlash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/txt_slash"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@id/ivStatus"
            app:layout_constraintStart_toEndOf="@id/tvStatus"
            app:layout_constraintTop_toTopOf="@id/ivStatus" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSpecie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@id/ivStatus"
            app:layout_constraintStart_toEndOf="@id/tvSlash"
            app:layout_constraintTop_toTopOf="@id/ivStatus"
            tools:text="Human" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTxtLastLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin_default"
            android:layout_marginEnd="@dimen/half_margin_default"
            android:text="@string/txt_last_known_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvCharacterName"
            app:layout_constraintTop_toBottomOf="@id/tvSpecie" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLastLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="@dimen/half_margin_default"
            android:textColor="?attr/colorOnSurface"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvCharacterName"
            app:layout_constraintTop_toBottomOf="@id/tvTxtLastLocation"
            tools:text="Citadel of Ricks" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTxtFirstSeen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin_default"
            android:layout_marginEnd="@dimen/half_margin_default"
            android:text="@string/txt_first_seen_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvCharacterName"
            app:layout_constraintTop_toBottomOf="@id/tvLastLocation" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvFirstEpisode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="@dimen/half_margin_default"
            android:textColor="?attr/colorOnSurface"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvCharacterName"
            app:layout_constraintTop_toBottomOf="@id/tvTxtFirstSeen"
            tools:text="Pilot" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>